callout-grid.css
.callout[data-callout="grid"] {
	--grid-columns: 2;

	--callout-color: unset;
	background-color: unset;


	&[data-callout-metadata~="columns-3"] {
		--grid-columns: 3;
	}

	&[data-callout-metadata~="columns-4"] {
		--grid-columns: 4;
	}

	&[data-callout-metadata~="columns-5"] {
		--grid-columns: 5;
	}

	> .callout-content {
		display: grid !important;
		grid-template-columns: repeat(var(--grid-columns), 1fr);
		align-items: center;
		gap: var(--size-4-1);

		align-items: start;

		> * {
			margin: 0 !important;
		}
	}

	&,
	& .callout[data-callout="image"] {
		padding: 0;

		height: 100%;

		> .callout-title {
			display: none;
		}
	}

	& .callout[data-callout="image"] {
		--callout-color: var(--callout-quote);

		> .callout-content {
			:first-child {
				margin-top: 0;
			}

			:last-child {
				margin-bottom: 0;
			}
		}
	}
}

